force-app/main/default/objects/ServiceApplication__c/ServiceApplication__c.object-meta.xml
<CustomObject>
    <label>サービス申込</label>
    <nameField>
        <displayFormat>SA{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>サービス申込コード</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>