force-app/main/default/objects/ServiceApplication__c/fields/ApplicationDatetime__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDatetime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>申込日時</label>
    <type>DateTime</type>
</CustomField>