force-app/main/default/objects/ServiceApplication__c/fields/Bill__c.field-meta.xml
<CustomField>
    <fullName>Bill__c</fullName>
    <label>ビル名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>