force-app/main/default/objects/ServiceApplication__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>契約</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>サービス申込</relationshipLabel>
    <relationshipName>ServiceApplicationContracts</relationshipName>
    <type>Lookup</type>
</CustomField>