force-app/main/default/objects/ServiceApplication__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>部署名</label>
    <length>80</length>
    <type>Text</type>
</CustomField>