force-app/main/default/objects/ServiceApplication__c/fields/FiullName__c.field-meta.xml
<CustomField>
    <fullName>FiullName__c</fullName>
    <formula>LastName__c &amp; &quot; &quot; &amp;  FirstName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>氏名</label>
    <type>Text</type>
</CustomField>