force-app/main/default/objects/ServiceApplication__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>電話番号</label>
    <type>Phone</type>
</CustomField>