force-app/main/default/objects/ServiceApplication__c/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <label>サービス名</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CloudService</valueSetName>
    </valueSet>
</CustomField>