force-app/main/default/objects/ServiceApplication__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>町名・番地</label>
    <length>80</length>
    <type>Text</type>
</CustomField>